--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,10 +1,11 @@
 html,
 body {
     max-width: 1560px;
-    height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    min-height: 100vh;
+    box-sizing: border-box;
 }
 
 .header {
@@ -97,10 +98,11 @@ nav ul {
 }
 
 .main__content {
-    padding: 90px 0;
-    height: 100%;
+    height: auto;
+    padding: 90px 0 20px;
     width: 100vw;
     min-height: 100vh;
+    box-sizing: border-box;
 }
 
 @media(max-width: 1100px) {
