--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,26 +1,25 @@
 .top-page__content {
     width: 100%;
     height: 100%;
-    max-width: 1560px;
-    padding: 15px 0;
+    padding: 5% 0 15px;
     box-sizing: border-box;
 }
 
 .top-page-list {
     width: 100%;
     display: flex;
-    height: 27px;
     border-bottom: 1px solid #808080;
     padding: 0 10%;
     gap: 6%;
     font-weight: bold;
-    font-size: 14px;
+    font-size: max(12px, min(calc(1.2vw), 18px));
     box-sizing: border-box;
 }
 
 .top-page-list a {
     text-decoration: none;
     color: #666666;
+    padding-bottom: 5px;
 }
 
 .top-page-list a.active{
@@ -35,13 +34,13 @@
     box-sizing: border-box;
 }
 
-.product_card {
+.product-card {
     position: relative;
     background-color: white;
     margin-bottom: 6%;
 }
 
-.product_card a {
+.product-card a {
     text-decoration: none;
     color: #303030;
     font-size: 1rem;
@@ -76,5 +75,11 @@
 @media(max-width: 850px) {
     .product-name {
         font-size: 13px;
+    }
+}
+
+@media(max-width: 767px) {
+    .product-name {
+        font-size: 11px;
     }
 }
