--- a/src/public/css/my-page.css
+++ b/src/public/css/my-page.css
@@ -1,21 +1,150 @@
 .my-page__content {
     width: 100%;
     height: 100%;
-    max-width: 1560px;
     box-sizing: border-box;
-    padding: 15px 0;
+    padding: 3% 0 15px;
     color: #333333;
 }
 
+.user__group {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
+    width: 60%;
+    margin: 2% auto;
+}
 
+.user__items {
+    display: flex;
+    align-items: center;
+    gap: 9%;
+    font-size: max(18px, min(calc(1.8vw), 22px));
+    font-weight: bold;
+}
 
+.profile__link {
+    text-align: center;
+    text-decoration: none;
+    color: #FF5555;
+    border: 1px solid #FF5555;
+    border-radius: 3px;
+    padding: 1.5% 0;
+    font-size: max(10px, min(calc(1vw), 16px));
+}
+
+.user-image {
+    width: 130px;
+    height: 130px;
+}
 
 .user-image img {
-    width: 120px;
-    height: 120px;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.default-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #ddd;
+}
+
+.product__group {
+    width: 100%;
+    margin-top: 5%;
+}
+
+.my-page-list {
+    width: 100%;
+    display: flex;
+    border-bottom: 1px solid #808080;
+    padding: 0 10%;
+    gap: 6%;
+    font-weight: bold;
+    font-size: max(12px, min(calc(1.2vw), 18px));
+    box-sizing: border-box;
+}
+
+.my-page-list a {
+    text-decoration: none;
+    color: #666666;
+    padding-bottom: 5px;
+}
+
+.my-page-list a.active {
+    color: #ff1818;
+}
+
+.product-list {
+    padding: 4.5% 5% 7%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5%;
+    box-sizing: border-box;
+}
+
+.product-card {
+    background-color: white;
+    margin-bottom: 6%;
+}
+
+.product-card a {
+    text-decoration: none;
+    color: #303030;
+    font-size: 1rem;
+}
+
+.product-image {
+    padding-top: 100%;
+    position: relative;
 }
 
 .product-image img {
-    width: 120px;
-    height: 120px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    border-radius: 3px;
+}
+
+@media(max-width: 1100px) {
+    .user-image {
+        width: 120px;
+        height: 120px;
+    }
+}
+
+@media(max-width: 850px) {
+    .user__group {
+        width: 65%;
+        margin: 3% auto;
+    }
+
+    .user-image {
+        width: 105px;
+        height: 105px;
+    }
+}
+
+@media(max-width: 767px) {
+    .user__group {
+        width: 65%;
+        margin: 4.5% auto;
+    }
+
+    .user__items {
+        font-size: 16px;
+    }
+
+    .user-image {
+        width: 90px;
+        height: 90px;
+    }
+
+    .product__group {
+        margin-top: 6%;
+    }
 }
