--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -1,9 +1,8 @@
 .profile__content {
     width: 100%;
     height: 100%;
-    max-width: 1560px;
     text-align: center;
-    padding: 20px 0;
+    padding: 3% 0 15px;
     box-sizing: border-box;
 }
 
@@ -12,6 +11,10 @@
     max-width: 530px;
     margin: 0 auto;
     text-align: left;
+}
+
+h2 {
+    font-size: max(22px, min(calc(2vw), 25px));
 }
 
 .profile-image__group {
@@ -40,7 +43,7 @@
 .profile-image__label {
     border: 1px solid #FF5555;
     color: #FF5555;
-    font-size: 13px;
+    font-size: max(10px, min(calc(1.2vw), 13px));
     padding: 3px 8px;
     border-radius: 3px;
     display: block;
@@ -59,7 +62,7 @@
     display: block;
     font-weight: bold;
     margin: 25px 0 2px;
-    font-size: 14px;
+    font-size: max(12px, min(calc(1vw), 14px));
 }
 
 .profile-form__input {
