--- a/src/public/css/products/create.css
+++ b/src/public/css/products/create.css
@@ -2,9 +2,9 @@
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-    padding: 0 16% 2%;
+    padding: 3.5% 16% 3%;
     text-align: center;
-    color: #333333;
+    color: #464646;
 }
 
 .product-form {
