--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -22,7 +22,7 @@
 .left-group {
     width: 100%;
     padding: 4% 3% 7%;
-    border-bottom: 1px solid #888888;
+    border-bottom: 1px solid#9f9f9f;
     box-sizing: border-box;
 }
 
@@ -116,7 +116,7 @@
 
 .right > div {
     width: 100%;
-    border: 1px solid #888888;
+    border: 1px solid #9f9f9f;
 }
 
 .right > div:first-child {
@@ -142,9 +142,17 @@
     font-size: max(13px, min(calc(1.4vw), 17px));
 }
 
+.stripe-error-message {
+    color: #FF5555;
+    font-size: 15px;
+    border: none;
+    text-align: center;
+    margin-top: 2%;
+}
+
 .payment-btn {
     width: 100%;
-    margin: 14% 0 0%;
+    margin: 14% 0 0;
     font-size: max(13px, min(calc(1.3vw), 14px));
     background-color: #FF5555;
     text-align: center;
@@ -159,6 +167,10 @@
     .image {
         width: 150px;
         height: 150px;
+    }
+
+    .stripe-error-message {
+        font-size: 13px;
     }
 }
 
@@ -186,5 +198,9 @@
     .fas {
         font-size: 13px;
         padding-top: 2px;
+    }
+
+    .stripe-error-message {
+        font-size: 12px;
     }
 }
