--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -84,6 +84,26 @@
     border-radius: 3px;
 }
 
+.sold-out-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.276);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    border-radius: 3px;
+}
+
+.sold-out-text {
+    color: rgb(222, 222, 222);
+    font-size: max(17px, min(calc(3.2vw), 50px));
+    font-weight: bold;
+}
+
 .product-name {
     font-size: 17px;
     margin-top: 5px;
