--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    padding: 3% 0 15px;
+    padding: 4% 0 15px;
     box-sizing: border-box;
     color: #464646;
 }
@@ -45,7 +45,7 @@ h2 {
     border: 1px solid #FF5555;
     color: #FF5555;
     font-size: max(10px, min(calc(1.2vw), 13px));
-    padding: 3px 8px;
+    padding: 1% 8px;
     border-radius: 3px;
     display: block;
 }
