--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -13,7 +13,7 @@
     padding: 0 10%;
     gap: 6%;
     font-weight: bold;
-    font-size: max(11px, min(calc(1.2vw), 15px));
+    font-size: max(11px, min(calc(1.4vw), 15px));
     box-sizing: border-box;
     position: relative;
 }
@@ -43,7 +43,7 @@
 }
 
 .product-list {
-    padding: 4.5% 5% 7%;
+    padding: 3.5% 5% 7%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 5%;
@@ -84,7 +84,7 @@
     border-radius: 3px;
 }
 
-.sold-out-overlay {
+.sold-overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -94,11 +94,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 800;
     border-radius: 3px;
 }
 
-.sold-out-text {
+.sold-label {
     color: rgb(222, 222, 222);
     font-size: max(17px, min(calc(3.2vw), 50px));
     font-weight: bold;
