--- a/src/public/css/my-page.css
+++ b/src/public/css/my-page.css
@@ -22,7 +22,7 @@
 }
 
 .user-name {
-    font-size: 20px;
+    font-size: max(16px, min(calc(2vw), 25px));
 }
 
 .profile__link {
@@ -67,7 +67,7 @@
     padding: 0 10%;
     gap: 6%;
     font-weight: bold;
-    font-size: max(11px, min(calc(1.2vw), 15px));
+    font-size: max(11px, min(calc(1.4vw), 15px));
     box-sizing: border-box;
     position: relative;
 }
@@ -97,7 +97,7 @@
 }
 
 .product-list {
-    padding: 4.5% 5% 7%;
+    padding: 3.5% 5% 6%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 5%;
@@ -138,18 +138,38 @@
     border-radius: 3px;
 }
 
+.sold-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.276);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 800;
+    border-radius: 3px;
+}
+
+.sold-label {
+    color: rgb(222, 222, 222);
+    font-size: max(17px, min(calc(3.2vw), 50px));
+    font-weight: bold;
+}
+
 @media(max-width: 1100px) {
     .user-image {
         width: 120px;
         height: 120px;
     }
 
-    .user-name {
-        font-size: 18px;
-    }
-
     .product-name {
         font-size: 14px;
+    }
+
+    .user-name {
+        font-size: 20px;
     }
 }
 
@@ -180,10 +200,6 @@
         height: 90px;
     }
 
-    .user-name {
-        font-size: 16px;
-    }
-
     .product__group {
         margin-top: 6%;
     }
@@ -194,5 +210,9 @@
 
     .reset-btn {
         padding: 4px 8px;
+    }
+
+    .user-name {
+        font-size: 17px;
     }
 }
