--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -43,7 +43,7 @@
 }
 
 .product-list {
-    padding: 3.5% 5% 7%;
+    padding: 3.5% 6% 7%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 5%;
@@ -112,6 +112,10 @@
 @media(max-width: 1100px) {
     .product-name {
         font-size: 14px;
+    }
+
+    .product-list {
+        padding: 3.5% 3% 7%;
     }
 }
 
