--- a/src/public/css/auth/auth.css
+++ b/src/public/css/auth/auth.css
@@ -1,13 +1,13 @@
-.login__content {
+.auth__content {
     width: 100%;
     height: 100%;
     text-align: center;
-    padding: 40px 0;
+    padding: 50px 0;
     color: #464646;
 }
 
 h2 {
-    margin-bottom: 47px;
+    margin-bottom: 55px;
 }
 
 .form {
@@ -38,18 +38,19 @@ h2 {
     font-size: 14px;
 }
 
-.form__input {
-    width: 98.4%;
+.form__input{
+    width: 100%;
     margin-bottom: 5px;
     height: 30px;
     border-radius: 3px;
     border: 1px solid #aaaaaa;
     padding: 0 10px;
+    box-sizing: border-box;
 }
 
 .form__btn {
     width: 100%;
-    margin: 60px 0 10px;
+    margin: 70px 0 10px;
     height: 37px;
     background-color: #FF5555;
     border-radius: 3px;
@@ -62,4 +63,27 @@ h2 {
     font-size: 12px;
     color: #0073CC;
     text-decoration: none;
+    display: block;
+    margin-bottom: 6px;
+}
+
+h3 {
+    margin-bottom: 10px;
+}
+
+.auth__description {
+    line-height: 1.3;
+    font-size: 14px;
+}
+
+.password-reset__link {
+    font-size: 12px;
+    color: #696a6a;
+    text-decoration: none;
+}
+
+@media (max-width: 850px) {
+    .form {
+        width: 65%;
+    }
 }
